[package]
name = "sql_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clickhouse-rs = { version = "^1.0.0-alpha.1", features = ["tokio_io", "tls"] }
ethnum = { version = "1.4.0", features = ["serde"] }
poem = { version = "1.3.58", features = ["anyhow"] }
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "chrono", "uuid"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlparser = { version = "0.38.0", features = ["visitor"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"

[patch.crates-io]
clickhouse-rs = { git = "https://github.com/semiotic-ai/clickhouse-rs.git", branch = "u256" }
